tests/dataset/tpc-ds/compiler/py/q28.out
Traceback (most recent call last):
  File "/tmp/q28.py", line 163, in <module>
    B1_LP=_avg([x["ss_list_price"] for x in bucket1]),
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/tmp/q28.py", line 163, in <listcomp>
    B1_LP=_avg([x["ss_list_price"] for x in bucket1]),
                ~^^^^^^^^^^^^^^^^^
TypeError: 'StoreSale' object is not subscriptable
